@@ -1,3 +1,8 @@
+Tuesday 26/04/16 :
+	@ 9:00pm :
+		- Finished commenting the function Bhv_BasicOffensiveKick:execute in bhv_basic_offensive_kick.cpp.
+		- Commented the function SampleCoach::doFirstSubstitute in sample_coach.cpp.
+
 Saturday 23/04/16:
 	@ 11:00pm:
 		- Commented the function Strategy::exchangeRole in strategy.cpp
